--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "file-queue": "^0.2.1",
     "fs-extra": "^0.30.0",
     "getmac": "^1.2.1",
-    "nmea": "0.0.9",
-    "pattern-emitter": "^1.0.0"
+    "jsonfile": "^2.4.0",
+    "nmea": "0.0.9"
   }
 }
