--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "file-queue": "^0.2.1",
     "fs-extra": "^0.30.0",
     "getmac": "^1.2.1",
+    "gps": "^0.2.0",
     "jsonfile": "^2.4.0",
     "nmea": "0.0.9"
   }
