Big changes to DVR, but needs real world testing.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,7 @@
             "program": "${workspaceRoot}\\index.js",
             "cwd": "${workspaceRoot}",
             "args": [
-                "--doCheckGitVersion=false",
-                "--runLevel=30"
+                "--doCheckGitVersion=false"
             ]
         },
         {
